--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:7.4.2'
     }
 }
 
@@ -27,27 +27,19 @@ allprojects {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 32
-    buildToolsVersion "32.0.3"
+    namespace "com.pusher.pushnotifications"
+    compileSdkVersion 34 
 
     defaultConfig {
-        minSdkVersion 24
-        targetSdkVersion 32
-        versionCode 1
-        versionName "1.0"
-        ndk {
-            abiFilters "armeabi-v7a", "x86"
-        }
-    }
-    lintOptions {
-       warning 'InvalidPackage'
+        minSdkVersion 21
+        targetSdkVersion 35
     }
 }
 
 dependencies {
-    implementation 'com.android.support:support-media-compat:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'androidx.core:core:1.9.0'
+    implementation 'androidx.media:media:1.6.0'
     implementation 'com.facebook.react:react-native:+'
-    implementation 'com.google.firebase:firebase-messaging:22.0.0'
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
     implementation 'com.pusher:push-notifications-android:1.10.0'
 }
