--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,10 @@ android {
         minSdkVersion 21
         targetSdkVersion 35
     }
+    
+    buildFeatures {
+        buildConfig = false // 🔥 prevents BuildConfig.class from being generated
+    }
 }
 
 dependencies {
